# codeindex

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  output.rs
crates/cli/src/commands/: config_cmd.rs  gc.rs  index.rs  init.rs  mod.rs  query.rs  stats.rs  status.rs  ui.rs  watch.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs  model.rs
crates/core/src/embedding/: local.rs  mod.rs  voyage.rs
crates/core/src/indexer/: pipeline.rs
crates/core/src/query/: expansion.rs  fusion.rs  mod.rs  parser.rs
crates/core/src/storage/: lock.rs  mod.rs  sqlite.rs  vectors.rs
crates/core/src/summary/: haiku.rs  mod.rs
crates/core/tests/: integration.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: debounce.rs  hooks.rs  lib.rs  main.rs  watcher.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: main.rs  tools.rs
crates/tree-sitter-langs/: Cargo.toml
crates/tree-sitter-langs/src/: c_lang.rs  cpp_lang.rs  go_lang.rs  lib.rs  python.rs  rust_lang.rs  typescript.rs
crates/tree-sitter-langs/tests/fixtures/cpp-project/src/: auth.cpp  auth.h  main.cpp
crates/tree-sitter-langs/tests/fixtures/go-project/auth/: handler.go  types.go
crates/tree-sitter-langs/tests/fixtures/python-project/src/: db.py
crates/tree-sitter-langs/tests/fixtures/python-project/src/auth/: handler.py  types.py
crates/tree-sitter-langs/tests/fixtures/typescript-project/src/: db.ts
crates/tree-sitter-langs/tests/fixtures/typescript-project/src/auth/: handler.ts  types.ts
crates/web/: Cargo.toml
crates/web/graph-ui/: index.html  package-lock.json  package.json  vite.config.ts
crates/web/graph-ui/src/: GraphApp.tsx  graph.css  main.tsx  useForceLayout.ts
crates/web/src/: lib.rs  server.rs  state.rs
crates/web/src/assets/css/: style.css
crates/web/src/assets/graph-app/: index.html
crates/web/src/assets/graph-app/assets/: index-CSLfwBFe.js  index-PxybRV6a.css
crates/web/src/assets/js/: dashboard.js  graph.js  htmx.min.js  theme.js
crates/web/src/routes/: activity.rs  api.rs  dashboard.rs  files.rs  graph.rs  mod.rs  search.rs  settings.rs
crates/web/src/templates/: mod.rs
docs/: 2026-04-12-codeindex-v02-enhancements-design.md  2026-04-12-codeindex-v02-plan.md  2026-04-12-web-dashboard-plan.md
tests/fixtures/go-project/src/: auth.go  user.go
tests/fixtures/python-project/src/: auth.py  user.py
tests/fixtures/rust-project/src/: db.rs  main.rs
tests/fixtures/rust-project/src/auth/: handler.rs  types.rs
tests/fixtures/typescript-project/src/: auth.ts  index.ts  user.ts
