[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/tree-sitter-langs",
    "crates/cli",
    "crates/mcp-server",
    "crates/daemon",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
blake3 = "1"
tracing = "0.1"
