[package]
name = "codeindex-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
blake3 = { workspace = true }
tracing = { workspace = true }
rusqlite = { version = "0.31", features = ["bundled"] }
codeindex-tree-sitter-langs = { path = "../tree-sitter-langs" }
ignore = "0.4"

[dev-dependencies]
tempfile = "3"
