[package]
name = "codeindex-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
blake3 = { workspace = true }
tracing = { workspace = true }
rusqlite = { version = "0.31", features = ["bundled"] }
codeindex-tree-sitter-langs = { path = "../tree-sitter-langs" }
ignore = "0.4"
instant-distance = "0.6"
dirs = "5"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
ort = "2.0.0-rc.12"
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
ndarray = "0.16"

[dev-dependencies]
tempfile = "3"
codeindex-tree-sitter-langs = { path = "../tree-sitter-langs" }
