[package]
name = "codeindex-daemon"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
codeindex-core = { path = "../core" }
codeindex-tree-sitter-langs = { path = "../tree-sitter-langs" }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
notify = "6"
ignore = "0.4"

[dev-dependencies]
tempfile = "3"
