[package]
name = "codeindex-mcp-server"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
codeindex-core = { path = "../core" }
codeindex-tree-sitter-langs = { path = "../tree-sitter-langs" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
