[package]
name = "codeindex-tree-sitter-langs"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
